# buffer-overflow-server

./: BackendCRUDOperations_TestingReport.docx  CMakeLists.txt  OverView of What was done so Far in Backend.docx  README.md
UI/: app.js  controller.js  controllers.js  index.html  login.html  package-lock.json  package.json
UI/partials/: dashboard.html  login.html
data/: CMakeCache.txt  Makefile  app-server  auth.csv  cmake_install.cmake  customers.csv  export.csv
scripts/: create_user.sh  start.sh  start.sh_old  stop.sh
src/: backup_main.cpp  bofattack.cpp  main.cpp  main_bk.cpp  main_bof.cpp  samplemain.cpp
